--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,17 @@
     <string name="Rates">Rates</string>
     <string name="top">There is Only One Boss.The Guest</string>
     <string name="Location">Location</string>
+    <string name="button55">*</string>
+    <string name="register_id">Register ID</string>
+    <string name="ex_date1">Ex Date</string>
+    <string name="card_number1">Card Number</string>
+    <string name="welcome_to_paradise_hotel1">Welcome To Paradise Hotel</string>
+    <string name="experitation_date1">Experitation Date</string>
+    <string name="change_your_details1">Change Your Details</string>
+    <string name="registration_id1">Registration ID</string>
+    <string name="cvc1">CVC</string>
+    <string name="card_number">Card number</string>
+    <string name="name1">Name</string>
 
 
 </resources>
